Fixed iPhone gap

--- a/frontend/src/pages/drive/components/MediaSlider/MediaSlider.module.scss
+++ b/frontend/src/pages/drive/components/MediaSlider/MediaSlider.module.scss
@@ -10,7 +10,7 @@
 
 .modal {
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   background-color: transparent;
   filter: drop-shadow(0 0 20px rgb(0, 0, 0));
   animation: AppearAnimation 0.2s linear forwards;
@@ -30,7 +30,7 @@
 
 .wrapper {
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   position: relative;
   display: flex;
   justify-content: center;
